<?xml version="1.0"?>
<package>
  <name>radar_visualization</name>
  <version>0.0.0</version>
  <description>The radar_visualization package</description>

  <maintainer email="jdp0009@auburn.edu">Dan Pierce</maintainer>

  <license>GAVLAB</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cacc_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cacc_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
